Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-25161

Diagnostic for invalid binding crashes

    XMLWordPrintable

Details

    Description

      If the expression that is the recipient of a V8 binding has no associated meta object, the code to produce a diagnostic message causes a crash.

      For example, the following will crash qmlscene:

      import QtQuick 2.0
      
      Item {
          Rectangle {
              anchors.verticalCenter: parent
          }
      }
      

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            mvogt Matthew Vogt (closed Nokia identity) (Inactive)
            mvogt Matthew Vogt (closed Nokia identity) (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes